Fix multiline/breaklines, change default to danish
If you want to access the English version, add `/?lang=en` ath the end of the url
Changes all paragraphs to spans because uniformity etc

--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -5,27 +5,36 @@ landing_comingSoon=Kommer snart
 landing_comingSoon_subscribe=Abonner for at få åbningstilbud!
 landing_submit=Abonner
 landing_generalInfo_christmas_title=Vil du lykkedes med den helt unikke julegave til hele familien?
-landing_generalInfo_christmas_text=Få et personligt trædesign med din familie og få det laser skåret i smukt egetræ. Skab sammenværdet i familien med en gave alle kan sætte pris på. Bestil det nemt og hurtigt. Få løst alle julegaverne på en gang, og få det sendt lige til døren.
-landing_generalInfo_product_title=produkt
-landing_generalInfo_product_text=Vælg et design. Skriv navnene ind som du ønsker på træet. Når du er tilfreds med træet trykker du bestil, så sørger vi for resten. Når du køber flere træer på en gang får du op til 30% rabat.
+landing_generalInfo_christmas_text=Få et personligt trædesign med din familie og få det laser skåret i smukt egetræ.\
+   Skab sammenværdet i familien med en gave alle kan sætte pris på. Bestil det nemt og hurtigt. Få løst alle julegaverne\
+   på en gang, og få det sendt lige til døren.
+landing_generalInfo_product_title=Produkt
+landing_generalInfo_product_text=Vælg et design. Skriv navnene ind som du ønsker på træet. Når du er tilfreds\
+   med træet trykker du bestil, så sørger vi for resten. Når du køber flere træer på en gang får du op til 30% rabat.
 landing_generalInfo_waste_title=Nul Affald
-landing_generalInfo_waste_text=Når du betaler, planter du automatisk også et træ og du er dermed med til at styrke naturen. Sammen planter 250+ træer for hvert egetræ vi bruger på at lave produktet. Indpakningen er også lavet 100% af genbrugspapir med FSC certificering.
+landing_generalInfo_waste_text=Når du betaler, planter du automatisk også et træ og du er dermed med til at\
+   styrke naturen. Sammen planter 250+ træer for hvert egetræ vi bruger på at lave produktet.\
+   Indpakningen er også lavet 100% af genbrugspapir med FSC certificering.
 landing_review_peter_title=Peter
-landing_review_peter_text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!"
+landing_review_peter_text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver\
+   til hele familien for i år. mange tak!"
 landing_review_amalie_title=Amalie
-landing_review_amalie_text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så kan vi printe den og klistre den på vores postkasse."
+landing_review_amalie_text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også\
+   PDF så kan vi printe den og klistre den på vores postkasse."
 landing_review_emilie_title=Emilie
-landing_review_emilie_text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D"
+landing_review_emilie_text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det\
+   er jeg sikker på! Mange tak til Treecreate :D"
 landing_review_desi_title=Cristian
 landing_review_desi_text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!"
 landing_review_anna_title=Anna
-landing_review_anna_text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at se ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen."
+landing_review_anna_text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom\
+   til at se ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen."
 landing_review_laura_title=Laura
 landing_review_laura_text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt."
 landing_footer_contact_title=Contact
 landing_footer_contact_text=Email: info@treecreate.net
 landing_footer_product_title=Produkt
-landing_footer_product_text=Når du bestiller planter du et træ Indpakning af 100% genbrusmaterialer Produceret i Danmark
+landing_footer_product_text=Når du bestiller planter du et træ\nIndpakning af 100% genbrusmaterialer\nProduceret i Danmark
 landing_footer_address_title=Adresse
-landing_footer_address_text=Danmark<br>København
+landing_footer_address_text=Danmark\nKøbenhavn
 landing_footer_copyright=Copyright © 2020 TreeCreate All Rights Reserved.
