Add language changing button
Add language changing button to the landing page
The locale (language) is managed via cookies

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 loremIpsum=Watashi Latin
 landing_popup_valid=Thank you for subscribing!
 landing_popup_invalid=Invalid email, sorry you're retarded
+landing_changeLanguage=Skift til Dansk
 landing_comingSoon=Coming Soon
 landing_comingSoon_subscribe=Subscribe for starting offers
 landing_submit=Submit
