--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -1,6 +1,7 @@
 loremIpsum=Watashi Latin
 landing_popup_valid=Tak for at abonnerer!
 landing_popup_invalid=Invalid email, sorry you're retarded
+landing_changeLanguage=Switch to English
 landing_comingSoon=Kommer snart
 landing_comingSoon_subscribe=Abonner for at få åbningstilbud!
 landing_submit=Abonner
