--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,17 +1,17 @@
 loremIpsum=Watashi Latin
-landing_popup_valid=Thank you for subscribing!
-landing_popup_invalid=Invalid email, sorry you're retarded
-landing_changeLanguage=Skift til Dansk
-landing_comingSoon=Coming Soon
-landing_comingSoon_subscribe=Subscribe for starting offers
-landing_submit=Submit
-landing_generalInfo_christmas_title=YEET christmas
-landing_generalInfo_christmas_text=More about christmas idk some bs. I need proper text for this
-landing_generalInfo_product_title=Product
-landing_generalInfo_product_text=Unique wood design. You get to pick the design and then create your own tree with\
+landing.popup.valid=Thank you for subscribing!
+landing.popup.invalid=Invalid email, sorry you're retarded
+landing.changeLanguage=Skift til Dansk
+landing.comingSoon=Coming Soon
+landing.comingSoon.subscribe=Subscribe for starting offers
+landing.submit=Submit
+landing.generalInfo.christmas.title=YEET christmas
+landing.generalInfo.christmas.text=More about christmas idk some bs. I need proper text for this
+landing.generalInfo.product.title=Product
+landing.generalInfo.product.text=Unique wood design. You get to pick the design and then create your own tree with\
    the names and text you want. With several options of changing design, fonts and text, every product becomes unique and personal.
-landing_generalInfo_waste_title=Waste
-landing_generalInfo_waste_text=We aim to support wildlife and forests around the world by donating a percentage to\
+landing.generalInfo.waste.title=Waste
+landing.generalInfo.waste.text=We aim to support wildlife and forests around the world by donating a percentage to\
    foundations like #TeamTrees that focus on planting trees. when you purchase something you automatically also plant a tree.\
    You also have the option plant several extra trees when you order.\n\n\
    \
@@ -21,24 +21,24 @@ landing_generalInfo_waste_text=We aim to support wildlife and forests around the
    Last but not least, we want to give every customer a personal and unique tree design that they can use personally\
    or as a great gift to friends and family. Our products are partially hand made and the rest is up to the laser\
    that cuts in great detail to make an astonishing work of art for the customer.
-landing_review_peter_title=Peter
-landing_review_peter_text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!”
-landing_review_amalie_title=Amalie
-landing_review_amalie_text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så kan vi\
+landing.review.peter.title=Peter
+landing.review.peter.text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!”
+landing.review.amalie.title=Amalie
+landing.review.amalie.text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så kan vi\
    printe den og klistre den på vores postkasse.”
-landing_review_emilie_title=Emilie
-landing_review_emilie_text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D”
-landing_review_desi_title=Cristian
-landing_review_desi_text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!”
-landing_review_anna_title=Anna
-landing_review_anna_text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at se ud.\
+landing.review.emilie.title=Emilie
+landing.review.emilie.text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D”
+landing.review.desi.title=Cristian
+landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!”
+landing.review.anna.title=Anna
+landing.review.anna.text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at se ud.\
    Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
-landing_review_laura_title=Laura
-landing_review_laura_text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt.”
-landing_footer_contact_title=Contact
-landing_footer_contact_text=Email: info@treecreate.net
-landing_footer_product_title=Product
-landing_footer_product_text=Every purchase plants a tree\nEco Friendly packaging\nProduced in Denmark
-landing_footer_address_title=Address
-landing_footer_address_text=Denmark\nCopenhagen
-landing_footer_copyright=Copyright © 2020 TreeCreate All Rights Reserved.
+landing.review.laura.title=Laura
+landing.review.laura.text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt.”
+landing.footer.contact.title=Contact
+landing.footer.contact.text=Email: info@treecreate.net
+landing.footer.product.title=Product
+landing.footer.product.text=Every purchase plants a tree\nEco Friendly packaging\nProduced in Denmark
+landing.footer.address.title=Address
+landing.footer.address.text=Denmark\nCopenhagen
+landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
