Add localization for input placeholder

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ landing.popup.invalid=Invalid email, sorry you're retarded
 landing.changeLanguage=Skift til Dansk
 landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
+landing.comingSoon.subscribe.input= Your email...
 landing.submit=Submit
 landing.generalInfo.christmas.title=YEET christmas
 landing.generalInfo.christmas.text=More about christmas idk some bs. I need proper text for this
