--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -4,6 +4,7 @@ landing.popup.invalid=Invalid email, sorry you're retarded
 landing.changeLanguage=Switch to English
 landing.comingSoon=Kommer snart
 landing.comingSoon.subscribe=Abonner for at få åbningstilbud!
+landing.comingSoon.subscribe.input= Din email...
 landing.submit=Abonner
 landing.generalInfo.christmas.title=Vil du lykkedes med den helt unikke julegave til hele familien?
 landing.generalInfo.christmas.text=Få et personligt trædesign med din familie og få det laser skåret i smukt egetræ.\
