--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,19 +23,19 @@ landing.generalInfo.waste.text=We aim to support wildlife and forests around the
    or as a great gift to friends and family. Our products are partially hand made and the rest is up to the laser\
    that cuts in great detail to make an astonishing work of art for the customer.
 landing.review.peter.title=Peter
-landing.review.peter.text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!”
+landing.review.peter.text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!"
 landing.review.amalie.title=Amalie
 landing.review.amalie.text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så kan vi\
-   printe den og klistre den på vores postkasse.”
+   printe den og klistre den på vores postkasse."
 landing.review.emilie.title=Emilie
-landing.review.emilie.text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D”
+landing.review.emilie.text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D"
 landing.review.desi.title=Cristian
-landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!”
+landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!"
 landing.review.anna.title=Anna
 landing.review.anna.text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at se ud.\
-   Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
+   Har det stående midt i stuen og bliver så glad af at se det hver morgen."
 landing.review.laura.title=Laura
-landing.review.laura.text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt.”
+landing.review.laura.text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt."
 landing.footer.contact.title=Contact
 landing.footer.contact.text=Email: info@treecreate.net
 landing.footer.product.title=Product
