--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,45 +1,38 @@
 loremIpsum=Watashi Latin
 landing.popup.valid=Thank you for subscribing!
-landing.popup.invalid=Invalid email, sorry you're retarded
+landing.popup.invalid=Invalid email...
 landing.changeLanguage=Skift til Dansk
 landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
 landing.comingSoon.subscribe.input= Your email...
 landing.submit=Submit
-landing.generalInfo.christmas.title=YEET christmas
-landing.generalInfo.christmas.text=More about christmas idk some bs. I need proper text for this
+landing.generalInfo.christmas.title=Do you want to give the perfect christmas present that is both unique and personal for the whole famil?
+landing.generalInfo.christmas.text=Get a personal design with your family tree and have it laser cut into a beautiful piece of oak wood. \
+  Have the family come together with a personal gift everyone can appreciate and adore. Order it in no time and avoid the christmas \
+  present struggle in just a few minutes. 
 landing.generalInfo.product.title=Product
-landing.generalInfo.product.text=Unique wood design. You get to pick the design and then create your own tree with\
-   the names and text you want. With several options of changing design, fonts and text, every product becomes unique and personal.
-landing.generalInfo.waste.title=Waste
-landing.generalInfo.waste.text=We aim to support wildlife and forests around the world by donating a percentage to\
-   foundations like #TeamTrees that focus on planting trees. when you purchase something you automatically also plant a tree.\
-   You also have the option plant several extra trees when you order.\n\n\
-   \
-   Our packaging is made of recycled plastic and paper and bio degradable paper tape. We focus on minimizing\
-   plastic production and try to have as much of the materials in the production be reuse of wood so no more trees are cut down.\n\n\
-   \
-   Last but not least, we want to give every customer a personal and unique tree design that they can use personally\
-   or as a great gift to friends and family. Our products are partially hand made and the rest is up to the laser\
-   that cuts in great detail to make an astonishing work of art for the customer.
+landing.generalInfo.product.text=Unique wood design. Write the names of the people you want to have on the design, select the size and how \
+  many, then we will take care of the rest. Get up to 30% off when buying for the whole family. 
+landing.generalInfo.waste.title=Zero Waste Agenda
+landing.generalInfo.waste.text=When you buy a design you're automatically planting a tree in the amazon forest. Together we plant 250+ trees\
+  for every tree we use to create these family trees. The packaging is made of 100% recycled FSC certified paper and therefore creates zero waste.
 landing.review.peter.title=Peter
-landing.review.peter.text="Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til hele familien for i år. mange tak!"
+landing.review.peter.text="Extremely detailed and some really nice wood. Now christmas presents for the whole family is sorted! Many thanks"
 landing.review.amalie.title=Amalie
-landing.review.amalie.text="Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så kan vi\
-   printe den og klistre den på vores postkasse."
+landing.review.amalie.text="oh my, its so beautiful! i love the little stand that comes along with it. We also got the design so we could print it out.\
+  Great service! "
 landing.review.emilie.title=Emilie
-landing.review.emilie.text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg sikker på! Mange tak til Treecreate :D"
+landing.review.emilie.text="Im so happy about my family tree. My grandmother will be so happy when she sees it I'm sure! Thank you Treecreate!"
 landing.review.desi.title=Cristian
 landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!"
 landing.review.anna.title=Anna
-landing.review.anna.text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at se ud.\
-   Har det stående midt i stuen og bliver så glad af at se det hver morgen."
+landing.review.anna.text="It's SO pretty. I love the family tree and how it ended up. I have it in the livingroom and I get so happy every time i see it."
 landing.review.laura.title=Laura
-landing.review.laura.text="Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig smukt."
+landing.review.laura.text="I bought one for my grandparent wedding and they loved it! It's so pretty."
 landing.footer.contact.title=Contact
 landing.footer.contact.text=Email: info@treecreate.net
 landing.footer.product.title=Product
 landing.footer.product.text=Every purchase plants a tree\nEco Friendly packaging\nProduced in Denmark
 landing.footer.address.title=Address
 landing.footer.address.text=Denmark\nCopenhagen
-landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
+landing.footer.copyright=Copyright ï¿½ 2020 TreeCreate All Rights Reserved.
