--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
 landing.comingSoon.subscribe.input= Your email...
 landing.submit=Submit
-landing.generalInfo.christmas.title=Do you want to give the perfect christmas present that is both unique and personal for the whole famil?
+landing.generalInfo.christmas.title=Are you missing the perfect christmas present that is both unique and personal for the whole family?
 landing.generalInfo.christmas.text=Get a personal design with your family tree and have it laser cut into a beautiful piece of oak wood. \
   Have the family come together with a personal gift everyone can appreciate and adore. Order it in no time and avoid the christmas \
   present struggle in just a few minutes. 
@@ -19,7 +19,7 @@ landing.generalInfo.waste.text=When you buy a design you're automatically planti
 landing.review.peter.title=Peter
 landing.review.peter.text="Extremely detailed and some really nice wood. Now christmas presents for the whole family is sorted! Many thanks"
 landing.review.amalie.title=Amalie
-landing.review.amalie.text="oh my, its so beautiful! i love the little stand that comes along with it. We also got the design so we could print it out.\
+landing.review.amalie.text="oh my, its so beautiful! i love the little stand that comes along with it. We also got the design so we could print it out. \
   Great service! "
 landing.review.emilie.title=Emilie
 landing.review.emilie.text="Im so happy about my family tree. My grandmother will be so happy when she sees it I'm sure! Thank you Treecreate!"
