--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,4 +36,4 @@ landing.footer.product.title=Product
 landing.footer.product.text=Every purchase plants a tree\nEco-Friendly packaging\nProduced in Denmark
 landing.footer.address.title=Address
 landing.footer.address.text=Denmark\nCopenhagen
-landing.footer.copyright=Copyright ï¿½ 2020 TreeCreate All Rights Reserved.
+landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
