--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -1,6 +1,6 @@
 loremIpsum=Watashi Latin
 landing.popup.valid=Tak for at abonnerer!
-landing.popup.invalid=Invalid email, sorry you're retarded
+landing.popup.invalid=Invalid email...
 landing.changeLanguage=Switch to English
 landing.comingSoon=Kommer snart
 landing.comingSoon.subscribe=Abonner for at få åbningstilbud!
@@ -27,7 +27,7 @@ landing.review.emilie.title=Emilie
 landing.review.emilie.text="Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det\
    er jeg sikker på! Mange tak til Treecreate :D"
 landing.review.desi.title=Cristian
-landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail its amazing!"
+landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail it's amazing!"
 landing.review.anna.title=Anna
 landing.review.anna.text="Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom\
    til at se ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen."
