--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,13 +6,13 @@ landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
 landing.comingSoon.subscribe.input=Your email...
 landing.submit=Submit
-landing.generalInfo.christmas.title=Are you missing the perfect Christmas present that is both unique and personal for the whole family?
+landing.generalInfo.christmas.title=Are you looking for the perfect Christmas present that is both unique and personal for the whole family?
 landing.generalInfo.christmas.text=Get a personal design with your family tree and have it laser cut into a beautiful piece of oak wood. \
    Have the family come together with a personal gift everyone can appreciate and adore. \
    Order it in no time and avoid the Christmas present struggle in just a few minutes.
 landing.generalInfo.product.title=Product
 landing.generalInfo.product.text=Unique wood design. Write the names of the people you want to have on the design, \
-   select the size and how many, then we will take care of the rest. Get up to 30% off when buying for the whole family.
+   select the amount, and we will take care of the rest. Get up to 30% off when buying for the whole family.
 landing.generalInfo.waste.title=Zero Waste Agenda
 landing.generalInfo.waste.text=When you buy a design you're automatically planting a tree in the Amazon forest. \
    Together we plant 250+ trees for every tree we use to create these family trees. \
