--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,13 +47,10 @@ HOMEPAGE=HOMEPAGE
 home.intro.title=Product
 home.intro.text=Unique wood design with several options of changing design, fonts and text. Every product becomes unique and \
   personal. In just a few minutes, you can create your own family tree and get it laser-cut into a beautiful piece of oak wood.
-home.sizes.title=Sizes
+home.size.title=Sizes
 home.size.text=After creating the design for your family tree, you are able to select the size you wish to purchase the tree in. \
-  We have a selection of sizes that include:\
-  \n20 x 20 cm - 495kr\
-  \n25 x 25 cm - 695kr\
-  \n30 x 30 cm - 995kr\
-  \nIf you wish to purchase another size, you can always request it by sending us an email at info@treecreate.dk. We will respond \
+  We have a selection of sizes that include:
+home.size.text.two=If you wish to purchase another size, you can always request it by sending us an email at info@treecreate.dk. We will respond \
   as quickly as possible and give you the best price we can offer depending on your request.
 home.package.title=In the package
 home.package.text=When you purchase a tree design, you are automatically planting a tree through TeamTrees.org. The packaging is \
@@ -65,7 +62,7 @@ home.team.text.members=\
   \nCEO Teodor Sylvester Jonasson, \
   \nCTO Jan Bogoryja-Zakrzewski,\
   \nCPO Gustav Kelkjær,\
-  \ndeveloper Cristian-Valentin,\
+  \ndeveloper Cristian-Valentin Purcea,\
   \ndeveloper Alex Maccagnan, \
   \nmarketing consultant Giang Truong Pham.
 home.team.text.two=\nOur goal is to create a sustainable company, that produces specialized and unique wood design for every customer. We aim to \
