--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -64,7 +64,7 @@ home.team.text.members=\
   \nCEO Teodor Sylvester Jonasson, \
   \nCTO Jan Bogoryja-Zakrzewski,\
   \nCPO Gustav Kelkjær,\
-  \ndeveloper Cristian-Valentin,\
+  \ndeveloper Cristian-Valentin Purcea,\
   \ndeveloper Alex Maccagnan, \
   \nmarkedsførings konsulent Giang Truong Pham.
 home.team.text.two=\nVores mål er at skabe personlige glæder i kraft af unikke produkter, som vores kunder kan dele med venner og familie. Samtidig vil vis \
