--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 NAVBAR=NAVBAR 
 
 navbar.products=Product
-navbar.items=Items
+navbar.items=Basket
 navbar.profile=Profile
 
 
@@ -89,7 +89,7 @@ LANDINGPAGE=LANDINGPAGE
 loremIpsum=Watashi Latin
 landing.popup.valid=Thank you for subscribing!
 landing.popup.invalid=Invalid email...
-landing.changeLanguage=Skift til Dansk
+landing.changeLanguage=Dansk
 landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
 landing.comingSoon.subscribe.input=Your email...
