--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,20 @@ basket.price=Price:
 basket.terms.and.conditions.text=I have read the
 basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
+basket.tax=20% Tax
+basket.total.price=SUM Price
+basket.amount=Amount
+basket.total=Total
+basket.save=Save
+basket.prod=Product
+basket.denmark=Denmark
+basket.other=Other
+basket.city=City
+basket.post.code=Postcode 
+basket.phone.number=Phone nr
+basket.street.address=Address 
+basket.names=Name
+basket.delivery.info=Delivery Info
 
 
 
