--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -39,6 +39,20 @@ basket.price=Pris:
 basket.terms.and.conditions.text=Jeg har læst og forstået
 basket.terms.and.conditions.link=vilkår og betingelser
 basket.subscribe=Få tilbud over e-mail
+basket.tax=20% Moms
+basket.total.price=SUM Pris 
+basket.amount=Antal
+basket.total=Total
+basket.save=Spare
+basket.prod=Produkt
+basket.denmark=Danmark
+basket.other=Andet
+basket.city=By
+basket.post.code=Postnummer
+basket.phone.number=Telefon nr
+basket.street.address=Adresse 
+basket.names=Navn
+basket.delivery.info=Leveringsinfo 
 
 
 HOMEPAGE=HOMEPAGE
