--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,6 +56,16 @@ basket.delivery.info=Delivery Info
 
 
 
+LOGIN=LOGIN
+
+login.password=Password
+login.confirm.password=Confirm password
+login.forgot.password=Forgot password?
+login.sign.up=SIGN UP
+login.create=Create Account
+
+
+
 HOMEPAGE=HOMEPAGE
 
 home.intro.title=Product
