--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -55,6 +55,17 @@ basket.names=Navn
 basket.delivery.info=Leveringsinfo 
 
 
+
+LOGIN=LOGIN
+
+login.password=Kode
+login.confirm.password=Bekræft Kode
+login.forgot.password=Glemt Kode?
+login.sign.up=OPRET NY
+login.create=Opret Konto
+
+
+
 HOMEPAGE=HOMEPAGE
 
 home.intro.title=Produkt
