--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,7 @@ basket.phone.number=Phone nr
 basket.street.address=Address 
 basket.names=Name
 basket.delivery.info=Delivery Info
+basket.back=Back
 
 
 
