--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -53,6 +53,7 @@ basket.phone.number=Telefon nr
 basket.street.address=Adresse 
 basket.names=Navn
 basket.delivery.info=Leveringsinfo 
+basket.back=Tilbage
 
 
 
