--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,7 +76,8 @@ home.size.title=Sizes
 home.size.text=After creating the design for your family tree, you are able to select the size you wish to purchase the tree in. \
   We have a selection of sizes that include:
 home.size.text.two=If you wish to purchase another size, you can always request it by sending us an email at info@treecreate.dk. We will respond \
-  as quickly as possible and give you the best price we can offer depending on your request.
+  as quickly as possible and give you the best price we can offer depending on your request. NOTE that the bark will be on the top of your design \
+  and not on the sides.
 home.package.title=In the package
 home.package.text=When you purchase a tree design, you are automatically planting a tree through TeamTrees.org. The packaging is \
   made with a zero procent waste agenda. 0% plastic and 100% reused FSC certified paper. You also receive a treecreate keychain, \
