--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -75,11 +75,9 @@ home.intro.text=Specialiseret træ design. Du laver designet – vi laserprinter
   hvert produkt helt unikt.
 home.sizes.title=Størrelser
 home.size.text=Efter du har skabt dit design, kan du vælge hvilken størrelse, du vil have det laserprintet i. Vi har lige \
-  nu 3 størrelser, du kan vælge imellem:\
-  \n20 x 20 cm - 495kr\
-  \n25 x 25 cm - 695kr\
-  \n30 x 30 cm - 995kr\
-  \nHvis du ønsker en anden størrelse, er du velkommen til at sende os en e-mail på info@treecreate.dk. Så giver vi dig en god pris!
+  nu 3 størrelser, du kan vælge imellem:
+home.size.text.two=Hvis du ønsker en anden størrelse, er du velkommen til at sende os en e-mail på info@treecreate.dk. \
+  Så giver vi dig en god pris! BEMÆRK at barken kommer til at være øverst på dit design og ikke på siderne.
 home.package.title=Med i pakken
 home.package.text=Når du køber et produkt hos os, får du ikke bare et smukt træ design men også en stander lavet specielt til dit design.\
   \nHver gang vi modtager en bestilling, planter vi et træ. Derfor er du med til at gøre verden til et bedre og grønnere sted!\
