--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,6 +57,17 @@ basket.back=Back
 
 
 
+COLLECTION=COLLECTION
+
+collection.box.content=Box content:
+collection.date.created=Date created:
+collection.edit=Edit
+collection.delete=Delete
+collection.boxes=Boxes: 
+collection.name=Name: 
+
+
+
 LOGIN=LOGIN
 
 login.password=Password
