--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -57,6 +57,17 @@ basket.back=Tilbage
 
 
 
+COLLECTION=COLLECTION
+
+collection.box.content=Boks indhold:
+collection.date.created=Dato for design:
+collection.edit=Rediger
+collection.delete=Slet
+collection.boxes=Kasser: 
+collection.name=Navn: 
+
+
+
 LOGIN=LOGIN
 
 login.password=Kode
