--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,6 +57,25 @@ basket.back=Back
 
 
 
+COOKIE=COOKIE
+
+cookie.title=Cookies Information 
+cookie.text=By clicking ACCEPT, you are agreeing with the cookie 
+cookie.link=terms and conditions
+cookie.text.two= of this page.
+cookie.accept=I ACCEPT
+
+
+
+ACCOUNT=ACCOUNT
+
+account.info=Account Info
+account.tree.collection=Tree Collection
+account.orders=Orders
+account.log.out=Log Out
+
+
+
 COLLECTION=COLLECTION
 
 collection.box.content=Box content:
