--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -57,6 +57,26 @@ basket.back=Tilbage
 
 
 
+COOKIE=COOKIE
+
+cookie.title=Cookie Information
+cookie.text=Ved at trykke JEG ACCEPTERER, accepterer du 
+cookie.link=vilkår og betingelser
+cookie.text.two= for denne side.
+cookie.accept=JEG ACCEPTERER 
+
+
+
+ACCOUNT=ACCOUNT
+
+account.info=Account Info
+account.tree.collection=Design Kollektion
+account.orders=Ordrer
+account.log.out=Log Ud
+
+
+
+
 COLLECTION=COLLECTION
 
 collection.box.content=Boks indhold:
