--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ familyTree.info.box.size=Name box size: make them larger for better visibility o
   important you purchase the larger designs like 30x30cm, so the text is readable.
 familyTree.option.save=Save
 familyTree.option.add=Add to basket
+familyTree.familyTree=Family Tree
 
 
 
@@ -73,6 +74,16 @@ account.info=Account Info
 account.tree.collection=Tree Collection
 account.orders=Orders
 account.log.out=Log Out
+
+
+
+MOBILE=MOBILE
+
+mobile.text=Treecreate does not support modifying or creating a tree on mobile devices yet. (coming soon)
+mobile.text.two=We hope you can return to 
+mobile.text.treecreate=Treecreate.dk
+mobile.text.three= on a laptop or computer to create your tree design.
+mobile.text.four=You can submit you e-mail here for special offers: 
 
 
 
