--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -20,6 +20,7 @@ familyTree.info.box.size=Navnekassernes størrelse. Gør dem ekstra store for be
   du køber et design, der er 30x30 cm, så teksten er tydelig nok. 
 familyTree.option.save=Gem
 familyTree.option.add=Læg i kurv
+familyTree.familyTree=Familietræ
 
 
 
@@ -60,10 +61,10 @@ basket.back=Tilbage
 COOKIE=COOKIE
 
 cookie.title=Cookie Information
-cookie.text=Ved at trykke JEG ACCEPTERER, accepterer du 
+cookie.text=Ved at trykke ACCEPTER, accepterer du 
 cookie.link=vilkår og betingelser
 cookie.text.two= for denne side.
-cookie.accept=JEG ACCEPTERER 
+cookie.accept=ACCEPTER 
 
 
 
@@ -74,6 +75,15 @@ account.tree.collection=Design Kollektion
 account.orders=Ordrer
 account.log.out=Log Ud
 
+
+
+MOBILE=MOBILE
+
+mobile.text=Treecreate understøtter desværre ikke mobiler til at lave træ design. (endnu - kommer snart)
+mobile.text.two=Vi håber i vil gå ind på 
+mobile.text.treecreate=Treecreate.dk
+mobile.text.three= via en computer eller laptop og lave jeres designs der i stedet.
+mobile.text.four=Du kan komme med på e-mail listen for at få specille tilbud her: 
 
 
 
