--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -71,7 +71,7 @@ cookie.accept=I ACCEPT
 ACCOUNT=ACCOUNT
 
 account.info=Account Info
-account.tree.collection=Tree Collection
+account.tree.collection=Basket
 account.orders=Orders
 account.log.out=Log Out
 
@@ -95,6 +95,9 @@ collection.edit=Edit
 collection.delete=Delete
 collection.boxes=Boxes: 
 collection.name=Name: 
+collection.size=Size:
+collection.amount=Amount:
+collection.checkout=Go to checkout
 
 
 
