--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -71,7 +71,7 @@ cookie.accept=ACCEPTER
 ACCOUNT=ACCOUNT
 
 account.info=Account Info
-account.tree.collection=Design Kollektion
+account.tree.collection=Kurv
 account.orders=Ordrer
 account.log.out=Log Ud
 
@@ -95,6 +95,9 @@ collection.edit=Rediger
 collection.delete=Slet
 collection.boxes=Kasser: 
 collection.name=Navn: 
+collection.size=Størrelse:
+collection.amount=Antal:
+collection.checkout=Gå til kassen
 
 
 
