--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,7 +37,7 @@ basket.info.design.size=Select the size you want your design to be: \
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
 basket.price=Price:
-basket.terms.and.conditions.text=I have read the
+basket.terms.and.conditions.text=By clicking Create Account you state that you have read and agree to our 
 basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
 basket.tax=20% Tax
