--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -114,30 +114,30 @@ login.create=Create Account
 HOMEPAGE=HOMEPAGE
 
 home.intro.title=Product
-home.intro.text=Unique wood design with several options of changing design, fonts and text. Every product becomes unique and \
-  personal. In just a few minutes, you can create your own family tree and get it laser-cut into a beautiful piece of oak wood.
+home.intro.text=Unique wood design with several styling options which make every product become completely unique. \
+  In just a few minutes, you can create your own family tree and get it laser-cut into a beautiful piece of oak wood.
 home.size.title=Sizes
 home.size.text=After creating the design for your family tree, you are able to select the size you wish to purchase the tree in. \
   We have a selection of sizes that include:
 home.size.text.two=If you wish to purchase another size, you can always request it by sending us an email at info@treecreate.dk. We will respond \
-  as quickly as possible and give you the best price we can offer depending on your request. NOTE that the bark will be on the top of your design \
+  as quickly as possible and give you the best price we can offer depending on your request. NOTE that the bark might be on the top of your design \
   and not on the sides.
 home.package.title=In the package
 home.package.text=When you purchase a tree design, you are automatically planting a tree through TeamTrees.org. The packaging is \
-  made with a zero procent waste agenda. 0% plastic and 100% reused FSC certified paper. You also receive a treecreate keychain, \
-  as well as, a wooden stand that matches your family tree.
+  made with a zero procent waste agenda: 0% plastic and 100% reused FSC certified paper. You also receive a treecreate keychain, \
+  as well as a wooden stand that matches your family tree.
 home.team.title=Team
 home.team.text=Treecreate was founded in September 2020 by a group of KEA students:
 home.team.text.members=\
   \nCEO Teodor Sylvester Jonasson, \
   \nCTO Jan Bogoryja-Zakrzewski,\
   \nCPO Gustav Kelkjær,\
-  \ndeveloper Cristian-Valentin Purcea,\
-  \ndeveloper Alex Maccagnan, \
-  \nmarketing consultant Giang Truong Pham.
+  \nDeveloper Cristian-Valentin Purcea,\
+  \nDeveloper Alex Maccagnan, \
+  \nMarketing Consultant Giang Truong Pham.
 home.team.text.two=\nOur goal is to create a sustainable company, that produces specialized and unique wood design for every customer. We aim to \
-  have as little waste in the production process as possible and to rebuild the forest we donate a part of the money made from \
-  each purchase to plant a tree.
+  have as little waste in the production process as possible. In addition to that, we support wildlife by donating a part of the money made from \
+  each purchase to plant a tree. That way we make the world a better and greener place - one tree at the time.
 
 
 
