--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -121,7 +121,7 @@ home.sizes.title=Størrelser
 home.size.text=Efter du har skabt dit design, kan du vælge hvilken størrelse, du vil have det laserprintet i. Vi har lige \
   nu 3 størrelser, du kan vælge imellem:
 home.size.text.two=Hvis du ønsker en anden størrelse, er du velkommen til at sende os en e-mail på info@treecreate.dk. \
-  Så giver vi dig en god pris! BEMÆRK at barken kommer til at være øverst på dit design og ikke på siderne.
+  Så giver vi dig en god pris! BEMÆRK at barken kan komme til at være øverst på dit design og ikke på siderne.
 home.package.title=Med i pakken
 home.package.text=Når du køber et produkt hos os, får du ikke bare et smukt træ design men også en stander lavet specielt til dit design.\
   \nHver gang vi modtager en bestilling, planter vi et træ. Derfor er du med til at gøre verden til et bedre og grønnere sted!\
@@ -132,11 +132,11 @@ home.team.text.members=\
   \nCEO Teodor Sylvester Jonasson, \
   \nCTO Jan Bogoryja-Zakrzewski,\
   \nCPO Gustav Kelkjær,\
-  \ndeveloper Cristian-Valentin Purcea,\
-  \ndeveloper Alex Maccagnan, \
-  \nmarkedsførings konsulent Giang Truong Pham.
-home.team.text.two=\nVores mål er at skabe personlige glæder i kraft af unikke produkter, som vores kunder kan dele med venner og familie. Samtidig vil vis \
-  ikre en bæredygtig grøn produktion. Vi stræber efter at reducere spildproduktion så meget som muligt. Derfor er langt størstedelen af \
+  \nDeveloper Cristian-Valentin Purcea,\
+  \nDeveloper Alex Maccagnan, \
+  \nMarkedsførings Konsulent Giang Truong Pham.
+home.team.text.two=\nVores mål er at skabe personlige glæder i kraft af unikke produkter, som vores kunder kan dele med venner og familie. Samtidig vil vi \
+  sikre en bæredygtig grøn produktion. Vi stræber efter at reducere spildproduktion så meget som muligt. Derfor er langt størstedelen af \
   materialerne, der indgår i vores produktion, genbrugsmaterialer. Desuden planter vi et træ hver gang, vi modtager en bestilling. Sådan \
   kan vi sammen gøre verden et lidt bedre og grønnere sted – ét træ ad gangen!
 
