--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -138,6 +138,7 @@ home.team.text.members=\
 home.team.text.two=\nOur goal is to create a sustainable company, that produces specialized and unique wood design for every customer. We aim to \
   have as little waste in the production process as possible. In addition to that, we support wildlife by donating a part of the money made from \
   each purchase to plant a tree. That way we make the world a better and greener place - one tree at the time.
+home.create.now=Design Your Tree
 
 
 
