--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -139,6 +139,8 @@ home.team.text.two=\nVores mål er at skabe personlige glæder i kraft af unikke
   sikre en bæredygtig grøn produktion. Vi stræber efter at reducere spildproduktion så meget som muligt. Derfor er langt størstedelen af \
   materialerne, der indgår i vores produktion, genbrugsmaterialer. Desuden planter vi et træ hver gang, vi modtager en bestilling. Sådan \
   kan vi sammen gøre verden et lidt bedre og grønnere sted – ét træ ad gangen!
+home.create.now=Design Dit Træ
+
 
 
 
