--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -139,6 +139,9 @@ home.team.text.two=\nOur goal is to create a sustainable company, that produces 
   have as little waste in the production process as possible. In addition to that, we support wildlife by donating a part of the money made from \
   each purchase to plant a tree. That way we make the world a better and greener place - one tree at the time.
 home.create.now=Design Your Tree
+home.subscribe.title=You can also submit your email to receive special offers here: 
+home.subscribe.input=Your e-mail...
+home.subscribe.button=Submit
 
 
 
