--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -140,6 +140,9 @@ home.team.text.two=\nVores mål er at skabe personlige glæder i kraft af unikke
   materialerne, der indgår i vores produktion, genbrugsmaterialer. Desuden planter vi et træ hver gang, vi modtager en bestilling. Sådan \
   kan vi sammen gøre verden et lidt bedre og grønnere sted – ét træ ad gangen!
 home.create.now=Design Dit Træ
+home.subscribe.title=Du kan også abonnere til vores e-mail liste for at få specielle tilbud her: 
+home.subscribe.input=Din e-mail...
+home.subscribe.button=Abonner
 
 
 
